# hot_teacup

./: CMakeLists.txt  README.md
cmake/: hot_teacupConfig.cmake.in
include/hot_teacup/: cookie.h  cookie_view.h  form.h  form_view.h  header.h  header_view.h  query.h  query_view.h  request.h  request_view.h  response.h  response_view.h  trait_utils.h  types.h
src/: cookie.cpp  cookie_view.cpp  form.cpp  form_view.cpp  header.cpp  header_view.cpp  query.cpp  query_view.cpp  request.cpp  request_view.cpp  response.cpp  response_view.cpp  types.cpp  utils.h
tests/: CMakeLists.txt  test_cookie.cpp  test_form.cpp  test_header.cpp  test_query.cpp  test_request.cpp  test_response.cpp
